# django-allcaptcha

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  manage.py  package-lock.json  package.json  requirements-dev.txt  setup.cfg  setup.py
allcaptcha/: apps.py  mixins.py  settings.py  tests.py  utils.py
allcaptcha/templates/: challenge.html
allcaptcha/templates/allcaptcha/: challenge.html
allcaptcha/templatetags/: allcaptcha_tags.py
allcaptcha/tests/: test_mixins.py  test_templatetags.py  test_utils.py  utils.py
django_allcaptcha/: asgi.py  extra_settings.sample.py  forms.py  settings.py  urls.py  views.py  wsgi.py
docs/: conf.py  index.rst  installation.rst  settings.rst  template-tags.rst  tutorial.rst
staticSrc/: allcaptcha.js
templates/: base.html  home.html  invisible_challenge_form.html  visible_challenge_form.html
