[metadata]
name = django-allcaptcha
version = 0.1.0
author = Michael Karamuth
author_email = michael@confuzeus.com
description = Easily integrate all sorts of 3rd party captcha services in your Django project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/confuzeus/django-allcaptcha
project_urls =
    Bug Tracker = https://github.com/confuzeus/django-allcaptcha/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Environment :: Plugins
    Intended Audience :: Developers

[options]
package_dir =
    = allcaptcha
packages = find:
python_requires = >=3.7
install_requires =
    requests

[options.packages.find]
where = allcaptcha
